# EveMarketeer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.example.ron
src/: command_parser.rs  config.rs  main.rs
src/commands/: mod.rs  ping.rs
src/eve/: esi.rs  evepraisal.rs  mod.rs
