[package]
name = "market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
rfesi = "0.10.0"
tokio = { version = "1", features = ["full"]}
dotenv = "0.15"
ron = "0.7.0"
serde = "1"
reqwest = { version = "0.11", features = ["json"]}
serde_json = "1"